--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -3,10 +3,8 @@ html {
     height: 100%;
 }
 
-
 /* Main page */
 body {
-    /*background-color: #eee;*/
     background-image: url("../img/blur-back.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -14,18 +12,10 @@ body {
     font-family: "Roboto" !important;
     height: 100%;
     margin: 0;
-    color: rgb(66, 12, 12);
+    color: rgb(194, 194, 194);
 }
-
-#channel strong {
-    color: white;
-    background-color: rgb(10, 238, 86);
-    padding: 2px;
-}
-
 
 /*----------------*/
-
 
 #chat {
     position: fixed;
@@ -41,7 +31,50 @@ body {
     box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.5);
 }
 
-#chat-user {
+#chat-msgs {
+    position: absolute;
+    bottom: 45px;
+    font-size: 10pt;
+    overflow-y: auto;
+    max-height: 90%;
+    width: 100%;
+}
+
+#chat-msgs::-webkit-scrollbar {
+    display: none;
+}
+
+.msg-div {
+    width: 100%;
+    height: auto;
+    min-height: 40px;
+    overflow: hidden;
+}
+
+.msg-text {
+    color: #fff;
+    position: relative;
+    min-height: auto;
+    max-width: 60%;
+    padding: 7px;
+    margin: 4px 10px 4px 10px;
+    /*margin-top: 5px;
+    margin-bottom: 5px;*/
+    border-radius: 7px;
+}
+
+.other-msg {
+    background-color: #979ca3;
+    /* margin-right: 50px; */
+    float: left;
+}    
+
+.own-msg {
+    background-color: #72bf3f;
+    float: right;
+}
+
+#chat-text-input-and-button {
     position: absolute;
     bottom: 0;
     margin: 0;
@@ -51,43 +84,4 @@ body {
 #chat-text-input {
     width: 100%;
     padding-right: 40px;
-}
-
-#send-bot {
-    /*width: 15%;*/
-    position: absolute;
-    padding: 0;
-    bottom:0;
-    right: 5px;
-    background-color: rgba(0, 0, 0, 0);
-    border: none;
-}
-
-#chat-msgs {
-    position: absolute;
-    bottom: 45px;
-    font-size: 10pt;
-    overflow-y: auto;
-    max-height: 90%;
-}
-
-#chat-msgs::-webkit-scrollbar {
-    display: none;
-}
-
-.message {
-    background: white;
-    min-width: 50px;
-    padding: 10px;
-    border-radius: 2px;
-    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.07);
-}
-
-#container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
 }
