--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,6 +12,8 @@ body {
     height: 100%;
     margin: 0;
     color: rgb(213, 213, 213);
+    font-family: 'Ubuntu', sans-serif;
+    border: none;
 }
 
 /*----------------*/
@@ -64,7 +66,6 @@ body {
     margin-bottom: 2px;
     border-radius: 20px;
     font-size: 22px;
-    margin-left: 50px;
 }
 
 .other-msg {
@@ -79,24 +80,15 @@ body {
     margin-right: 2% !important;
 }
 
-#chat-text-input-and-button {
+/*#chat-text-input {
     position: absolute;
     bottom: 0;
     margin: 0;
     width: 100%;
-}
+}*/
   
 .center{
     text-align: center;
-}
-
-#message-to-send,
-span,
-.msg-div
-{
-    font-family: 'Ubuntu', sans-serif;
-    padding: 5px;
-    border: none;
 }
   
 #message-to-send:focus {
@@ -104,6 +96,8 @@ span,
 }
   
 #message-to-send {
+    position: absolute;
+    bottom: 0;
     font-size: 40px;
     margin-bottom: 2%;
     margin-left: 2%;
