--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -11,7 +11,7 @@ body {
     background-size: cover;
     height: 100%;
     margin: 0;
-    color: rgb(213, 213, 213);
+    color: rgb(130, 130, 130);
     font-family: 'Ubuntu', sans-serif;
     border: none;
 }
@@ -40,6 +40,7 @@ body {
 #chat-msgs {
     position: absolute;
     bottom: 20%;
+    top: 5%;
     font-size: 10pt;
     overflow-y: auto;
     overflow-x: hidden;
