--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -41,7 +41,7 @@ body {
     position: absolute;
     bottom: 20%;
     top: 5%;
-    font-size: 10pt;
+    font-size: 2vh;
     overflow-y: auto;
     overflow-x: hidden;
     max-height: 90%;
@@ -66,7 +66,7 @@ body {
     max-width: 40%;
     margin-bottom: 2px;
     border-radius: 20px;
-    font-size: 22px;
+    font-size: 3vh;
 }
 
 .other-msg {
@@ -99,7 +99,7 @@ body {
 #message-to-send {
     position: absolute;
     bottom: 0;
-    font-size: 40px;
+    font-size: 4vh;
     margin-bottom: 2%;
     margin-left: 2%;
     width: 95%;
